crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_2.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/set/missing_closing_curly_brace_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..144,
        body: [
            Expr(
                StmtExpr {
                    range: 134..144,
                    value: Set(
                        ExprSet {
                            range: 134..144,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 135..136,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    ExprBinOp {
                                        range: 139..144,
                                        left: Name(
                                            ExprName {
                                                range: 139..140,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                range: 143..144,
                                                id: "y",
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | {1,
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
